download status, downloader fix. v0.2.05
* refined download status

* undefined was passed to downloader and not properly handled in downloader

* lazyload loads more offscreen previews

* some style changes

--- a/style.css
+++ b/style.css
@@ -659,7 +659,8 @@ img.avatar {
 .contextmenu {
     position: absolute;
     padding: 0;
-    background: white;
+    background: #202020;
+    box-shadow: 0px 2px 20px -1px rgba(0,0,0,0.75);
 }
 
 .contextmenu div {
@@ -858,19 +859,20 @@ span.lang.right > span {
     height: 2em;
 }
 
-.downloadCard {
-    font: 13px/1.3 "Helvetica Neue", Arial, Helvetica, sans-serif;
-    min-height: 128px;
-    margin: 0.2rem 0 0.2rem 0;
-    background-color: #222222;
-    border-radius: 2px;
-    min-width: 350px;
-    border-left: 5px solid #222222;
-    padding-left: 5px;
-    padding-top: 10px;
-    padding-right: 10px;
+.card.downloadCard {
+    border-left: 0px;
+    padding-left: 0px;
 }
 
 .focusedDownloadCard {
     background-color: #2F2F2F;
 }
+
+a.downloadGet, .downloadWhole{
+    color: #039be5;
+    font-weight: 700;
+}
+
+/* .card:not(.cardProfileImg) {
+    height: 190px;
+} */
